--- a/style.css
+++ b/style.css
@@ -9,7 +9,23 @@ body {
   background: none;
   background-color: black !important;
   background-image: linear-gradient(to right, black, #163d52);
-  color: white;
+
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 2px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px 50px;
+  background-color: #f4f7ff;
+  box-shadow: 2px 2px 12px;
+  z-index: 1;
 }
 
 .navbar li:hover {
@@ -28,6 +44,7 @@ li > a {
 .fa {
   color: white;
 }
+
 /* <!--NAV END-- >  */
 
 .landing {
@@ -120,11 +137,6 @@ strong {
 }
 
 /* <!--SERVICES START-- >  */
-.service-content {
-  background: #3da8e0;
-  opacity: ;
-}
-
 .grid-content {
   background-color: #3da8e0;
 }
@@ -142,8 +154,9 @@ strong {
 .grid-service {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 50px;
-  padding: 20px;
+  gap: 10px;
+  padding: 10px;
+  column-rule-style: groove;
 }
 
 .grid-container > div {
@@ -155,6 +168,9 @@ strong {
   border-radius: 5px;
 }
 
+.service-item {
+  width: auto;
+}
 /* .grid-item {
   margin: auto;
   display: block;
@@ -272,6 +288,7 @@ strong {
 .subscribe {
   background-image: linear-gradient(#3da8e0, #163d52);
 }
+
 /* <!--FOOTER START-- >  */
 footer {
   background-color: #3da8e0;
@@ -280,13 +297,13 @@ footer {
 
 .footer-container {
   display: grid;
-  column-gap: px;
+  column-gap: 5px;
   grid-template-columns: auto auto auto auto;
-  padding: 10px;
+  padding: 5px;
 }
 
 .footer-item {
-  padding: 10px;
+  padding: 5px;
   font-size: 18px;
   color: white;
 }
@@ -294,6 +311,12 @@ footer {
 .footer-item a {
   color: white;
 }
+
+.footer-item h6 {
+  color: white;
+  font-size: 10px;
+}
+/* <!--FOOTER END-- >  */
 
 /* OUR COMPANY PAGE START*/
 .mainourcompany {
