--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   box-sizing: border-box;
   padding: 10px 50px;
   background-color: #f4f7ff;
-  box-shadow: 2px 2px 12px;
+  box-shadow: 2px 2px 12px #3da8e0;
   z-index: 1;
 }
 
@@ -41,11 +41,17 @@ li > a {
   color: #fff !important;
 }
 
-.fa {
-  color: white;
+#main {
+  /* width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  background-color: #edf1fd;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: 300px;
+  background-position: right center;
+  justify-content: ; */
 }
-
-/* <!--NAV END-- >  */
 
 .landing {
   background: linear-gradient(
@@ -57,6 +63,8 @@ li > a {
   background-repeat: none;
   height: 80vh;
   background-size: cover;
+  z-index: 4;
+  margin-top: 80px;
 }
 
 .landing h1 {
