--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
   background: none;
   background-color: black !important;
   background-image: linear-gradient(to right, black, #163d52);
-
   position: fixed;
   display: flex;
   justify-content: space-between;
@@ -33,7 +32,6 @@ body {
 }
 
 .navbar-brand p {
-  font-family: "exo";
   font-weight: bold;
   font-size: 10px;
 }
@@ -41,21 +39,12 @@ li > a {
   color: #fff !important;
 }
 
-/* width: 100%;
-  height: 100vh;
-  box-sizing: border-box;
-  background-color: #edf1fd;
-  position: relative;
-  background-repeat: no-repeat;
-  background-size: 300px;
-  background-position: right center;
-  justify-content: ; */
-
+/* .landing */
 .landing {
   background: linear-gradient(
       to top,
-      rgba(0, 0, 0, 0.3) 50%,
-      rgba(0, 0, 0, 0.3) 50%
+      rgba(0, 0, 0, 0.4) 50%,
+      rgba(0, 0, 0, 0.4) 50%
     ),
     url(images2/nasa-yZygONrUBe8-unsplash.jpg);
   background-repeat: none;
@@ -63,48 +52,108 @@ li > a {
   width: 100%;
   background-size: cover;
 
-  z-index: 4;
+  z-index: 1;
   margin-top: 80px;
-}
-
-.landing h1 {
-  color: white;
 }
 
 .landing-item {
   color: white;
-  text-shadow: 2px 2px #163d52;
   font-size: 18px;
 }
 
 .landing-items {
   margin-top: 80px;
 }
+/* .landing end*/
+
+/* social start */
+.social {
+  position: absolute;
+  left: 50px;
+  bottom: 50px;
+  display: flex;
+}
+
+.btn-see {
+  width: 180px;
+  height: 40px;
+  border-radius: 15px;
+  border: none;
+  outline: none;
+  background-color: #3da8e0;
+  color: white;
+  padding: 10px;
+}
+
+.about-text button:hover {
+  background-color: white;
+  transition: all ease 0.3s;
+}
+
+.social a {
+  margin: 6px 12px;
+}
+
+.social i {
+  color: #3da8e0;
+  font-size: 20px;
+}
+
+.social a:hover i {
+  color: #163d52;
+  transition: all ease 0.5s;
+}
+/* social start */
 
 /* ABOUTHOME START */
-.row h4 {
+#about {
+  width: 80%;
+  height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px 5% 0px 5%;
+}
+
+.about-text {
+  width: 50%;
+}
+
+.about-text h3 {
+  font-size: 2rem;
   color: #3da8e0;
 }
 
-strong {
-  color: #3da8e0;
+.about-text h2 {
+  font-size: 24px;
+  color: #ffffff;
+  font-weight: 400;
 }
 
-.btn {
-  color: white;
-  font-weight: bold;
+.about-text h1,
+h2 {
+  margin: 0px;
+  padding: 0px;
+}
+
+.about-text p {
+  font-size: 1.2rem;
+  color: rgba(251, 251, 251, 0.9);
+}
+
+.about-text button {
+  width: 180px;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  outline: none;
   background-color: #3da8e0;
 }
 
-.firstabout p {
-  color: white;
-  inline-size: 2;
-  font-size: 18px;
-}
-
-.firstabout img {
-  box-shadow: 3px 3px 3px #3da8e0;
-  height: 500px;
+.about-text button:hover {
+  background-color: white;
+  transition: all ease 0.3s;
 }
 /* ABOUTHOME END */
 
@@ -144,7 +193,114 @@ strong {
   }
 }
 
+/* NEW SERVICES SECTION */
+#services {
+  width: 100%;
+  height: 100vh;
+  font-family: "exo";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 40px;
+}
+
+.s-heading h1 {
+  color: #ffffff;
+  font-size: 3rem;
+  margin: 0px;
+  padding: 0px;
+}
+
+.s-heading p {
+  color: rgba(249, 249, 249, 0.3);
+  font-size: 1rem;
+  margin: 0px;
+  padding: 0px;
+}
+
+.s-heading {
+  text-align: center;
+  margin: 20px 0px;
+}
+
+.s-box {
+  background-color: #2b2b2b;
+  width: 350px;
+  height: 500px;
+  margin: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+
+.s-b-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.s-b-img {
+  width: 100%;
+  height: 70%;
+}
+
+.s-b-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.s-b-text {
+  width: 100%;
+  height: 30%;
+  background-color: #1e1e1e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.s-b-text a {
+  margin: 0px;
+  color: #ffffff;
+  font-size: 1.1rem;
+  font-family: "exo";
+  display: block;
+  display: -webkit-box;
+  max-width: 80%;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+}
+
+.s-type {
+  font-family: "exo";
+  color: #ffffff;
+  background-color: #151515;
+  padding: 10px 15px;
+  position: absolute;
+  top: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 18px;
+  border-radius: 0px 0px 10px 10px;
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+}
+
+.s-box:hover {
+  transform: translateY(-10px);
+  transition: all ease 0.3s;
+}
+
+.s-b-text a:hover {
+  color: rgba(255, 255, 255, 0.5);
+}
+/* NEW SERVICES SECTION END */
+
 /* <!--SERVICES START-- >  */
+
 .grid-content {
   background-color: #3da8e0;
 }
