--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ h2 {
 }
 
 .about-text button {
-  width: 180px;
+  width: 150px;
   height: 40px;
   border-radius: 20px;
   border: none;
@@ -205,6 +205,17 @@ h2 {
   padding-top: 40px;
 }
 
+#services2 {
+  width: 100%;
+  height: 100vh;
+  font-family: "exo";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: px;
+}
+
 .s-heading h1 {
   color: #ffffff;
   font-size: 3rem;
@@ -231,7 +242,7 @@ h2 {
   margin: 20px;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 5px 5px black;
   position: relative;
 }
 
@@ -301,65 +312,70 @@ h2 {
 
 /* <!--SERVICES START-- >  */
 
-.grid-content {
+/* OUR STORY */
+#ourstory {
+  margin: auto;
+  color: white;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 50%;
+  display: block;
+}
+
+#ourstory {
+  font-size: 1rem;
+}
+
+.ourstory-text {
+  color: white;
+  align-items: center;
+}
+
+.ourstory-text button {
+  width: 130px;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  outline: none;
   background-color: #3da8e0;
 }
 
-.grid-content h2 {
-  color: white;
-}
-
-.btn-readMore {
+.ourstory-text button:hover {
   background-color: white;
-  color: #3da8e0;
-  box-shadow: 0px 5px #163d52;
+  transition: all ease 0.3s;
 }
 
-.grid-service {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
-  padding: 10px;
-  column-rule-style: groove;
-}
-
-.grid-container > div {
-  background-color: rgb(255, 255, 255);
-  text-align: center;
-  padding: 10px;
-  font-size: 18px;
-  border: 3px;
-  border-radius: 5px;
-}
-
-.service-item {
-  width: auto;
-}
-/* .grid-item {
-  margin: auto;
-  display: block;
-} */
-.grid-container h4 {
-  color: #3da8e0;
-}
-/* <!--SERVICES END--> */
-
-/* OUR STORY */
-.ourstory {
-  margin: auto;
-  color: white;
-}
-/* NESWSLETTER START */
-
-.newsletter-subscribe {
+/* call to action */
+#call {
   color: #eaf7fd !important;
   background-color: #3da8e0;
-  padding: 55px 74px;
-  margin: auto;
+  padding: 5px;
+  display: flex;
 }
+
+#call .call-text {
+  align-items: center;
+  justify-content: center;
+}
+#call button {
+  width: 130px;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  background-color: white;
+}
+
+#call button:hover {
+  background-color: #163d52;
+  color: white;
+}
+
+/* NESWSLETTER START */
 
 .newsletter-subscribe p {
   line-height: 1.5;
+  color: white;
 }
 
 .newsletter-subscribe h2 {
@@ -454,32 +470,196 @@ h2 {
 }
 
 /* <!--FOOTER START-- >  */
-footer {
-  background-color: #3da8e0;
-  height: auto;
+/* Main Footer */
+footer .main-footer {
+  padding: 20px 0;
+  background: #3da8e0;
+}
+footer ul {
+  padding-left: 0;
+  list-style: none;
 }
 
-.footer-container {
-  display: grid;
-  column-gap: 5px;
-  grid-template-columns: auto auto auto auto;
-  padding: 5px;
+/* Copy Right Footer */
+.footer-copyright {
+  background: #163d52;
+  padding: 5px 0;
 }
-
-.footer-item {
-  padding: 5px;
-  font-size: 18px;
+.footer-copyright .logo {
+  display: inherit;
+}
+.footer-copyright nav {
+  float: right;
+  margin-top: 5px;
+}
+.footer-copyright nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.footer-copyright nav ul li {
+  border-left: 1px solid #163d52;
+  display: inline-block;
+  line-height: 12px;
+  margin: 0;
+  padding: 0 8px;
+}
+.footer-copyright nav ul li a {
   color: white;
 }
-
-.footer-item a {
-  color: white;
+.footer-copyright nav ul li:first-child {
+  border: medium none;
+  padding-left: 0;
+}
+.footer-copyright p {
+  color: #969696;
+  margin: 2px 0 0;
 }
 
-.footer-item h6 {
-  color: white;
-  font-size: 10px;
+/* Footer Top */
+.footer-top {
+  background: #163d52;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  border-bottom: 3px solid #222;
 }
+
+/* Footer transparent */
+footer.transparent .footer-top,
+footer.transparent .main-footer {
+  background: transparent;
+}
+footer.transparent .footer-copyright {
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.3);
+}
+
+/* Footer light */
+footer.light .footer-top {
+  background: #f9f9f9;
+}
+footer.light .main-footer {
+  background: #f9f9f9;
+}
+footer.light .footer-copyright {
+  background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3);
+}
+
+/* Footer 4 */
+.footer- .logo {
+  display: inline-block;
+}
+
+/*==================== 
+  Widgets 
+====================== */
+.widget {
+  padding: 20px;
+  margin-bottom: 40px;
+}
+.widget.widget-last {
+  margin-bottom: 0px;
+}
+.widget.no-box {
+  padding: 0;
+  background-color: transparent;
+  margin-bottom: 40px;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -o-box-shadow: none;
+}
+.widget.subscribe p {
+  margin-bottom: 18px;
+}
+.widget li a {
+  color: #163d52;
+}
+.widget li a:hover {
+  color: black;
+}
+.widget-title {
+  margin-bottom: 20px;
+}
+.widget-title span {
+  background: #163d52 none repeat scroll 0 0;
+  display: block;
+  height: 1px;
+  margin-top: 25px;
+  position: relative;
+  width: 20%;
+}
+.widget-title span::after {
+  background: inherit;
+  content: "";
+  height: inherit;
+  position: absolute;
+  top: -4px;
+  width: 50%;
+}
+.widget-title.text-center span,
+.widget-title.text-center span::after {
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
+.widget .badge {
+  float: right;
+  background: #163d52;
+}
+
+.typo-light h1,
+.typo-light h2,
+.typo-light h3,
+.typo-light h4,
+.typo-light h5,
+.typo-light h6,
+.typo-light p,
+.typo-light div,
+.typo-light span,
+.typo-light small {
+  color: #fff;
+}
+
+ul.social-footer2 {
+  margin: 0;
+  padding: 0;
+  width: auto;
+}
+ul.social-footer2 li {
+  display: inline-block;
+  padding: 0;
+}
+ul.social-footer2 li a:hover {
+}
+ul.social-footer2 li a {
+  display: block;
+  height: 30px;
+  width: 30px;
+  text-align: center;
+}
+.btn {
+  background-color: #ffffff;
+  color: #163d52;
+}
+.btn:hover,
+.btn:focus,
+.btn.active {
+  background: #163d52;
+  color: #fff;
+  -webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -ms-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -o-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 250ms ease-in-out 0s;
+  -moz-transition: all 250ms ease-in-out 0s;
+  -ms-transition: all 250ms ease-in-out 0s;
+  -o-transition: all 250ms ease-in-out 0s;
+  transition: all 250ms ease-in-out 0s;
+}
+
 /* <!--FOOTER END-- >  */
 
 /* OUR COMPANY PAGE START*/
