--- a/style.css
+++ b/style.css
@@ -668,12 +668,12 @@ ul.social-footer2 li a {
   height: 177px;
   width: 100%;
   color: white;
+  margin-top: 80px;
 }
 
 .abouttext > p {
   font-size: 18px;
   color: white;
-  padding: ;
 }
 
 .contact-items > p {
