--- a/style.css
+++ b/style.css
@@ -802,6 +802,13 @@ ul.social-footer2 li a {
   }
 }
 
+@media screen and (max-width: 768px) {
+  nav {
+    width: 100%;
+    display: block;
+  }
+}
+
 .wwd-box {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
