--- a/style.css
+++ b/style.css
@@ -799,12 +799,7 @@ ul.social-footer2 li a {
   #whatwedo5 {
     width: 100%;
     display: block;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  nav {
-    width: 100%;
+    box-shadow: 3px 3px 3px #3da8e0;
   }
 }
 
