--- a/style.css
+++ b/style.css
@@ -799,35 +799,41 @@ ul.social-footer2 li a {
   #whatwedo5 {
     width: 100%;
     display: block;
+  }
+  .wwd-box {
     box-shadow: 3px 3px 3px #3da8e0;
   }
 }
 
 .wwd-box {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 5px 0 rgba(0, 0, 0, 0.7);
   transition: 0.3s;
-  width: 80%;
-  background-color: rgba(0, 0, 0, 0.2);
-  margin: 10px;
+  width: 90%;
+  background-color: black;
+  margin-top: 30px;
   justify-content: center;
-  margin: auto;
+  border-radius: 10px;
 }
 
 .wwd-box h2 {
   color: white;
   padding: 10px;
+  background-color: black;
+  border-radius: 10px;
 }
 .wwd-box:hover {
   box-shadow: 0 8px 16px 0 #3da8e0;
   transform: translateY(-10px);
-  transition: all ease 0.3s;
+  transition: all ease 0.1s;
 }
 
 .wwd-text {
   padding: 2px 16px;
   color: white;
   letter-spacing: 1px;
+  box-sizing: 40px;
 }
+
 /* CONTACT US SECTION */
 #contactus {
   background-image: url(images/our\ contact.png);
