--- a/style.css
+++ b/style.css
@@ -341,6 +341,9 @@ li > a {
   #contact-form form {
     width: 95% !important;
   }
+  nav {
+    position: fixed;
+  }
 }
 
 @media (max-width: 970px) {
@@ -367,6 +370,9 @@ li > a {
   }
   .p-b-container {
     width: 100%;
+  }
+  nav {
+    position: fixed;
   }
 }
 
