--- a/style.css
+++ b/style.css
@@ -809,6 +809,9 @@ ul.social-footer2 li a {
   .wwd-box {
     box-shadow: 3px 3px 3px #3da8e0;
   }
+  .mainwhatwedo {
+    margin-top: 80px;
+  }
 }
 
 .wwd-box {
