--- a/style.css
+++ b/style.css
@@ -839,7 +839,9 @@ ul.social-footer2 li a {
   color: white;
 }
 
-
+#mainourcompany .c-about img{
+  width: 500px;
+}
 
 /* OUR HISTORY SECTION */
 
